force-app/main/default/objects/Flow_Health_Custom_Rule__c/Flow_Health_Custom_Rule__c.object-meta.xml
<CustomObject>
    <label>Flow Health Custom Rule</label>
    <pluralLabel>Flow Health Custom Rules</pluralLabel>
    <description>User-defined custom rules for flow health analysis. Allows admins to create their own rules without writing Apex code. Rules are evaluated by the CustomRuleEvaluator engine.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>