force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Performance</fullName><default>false</default><label>Performance</label></value>
            <value><fullName>Error Handling</fullName><default>false</default><label>Error Handling</label></value>
            <value><fullName>Design</fullName><default>true</default><label>Design</label></value>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>