force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>Human-readable description shown when this rule triggers</description>
</CustomField>