force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <type>Text</type>
    <length>255</length>
    <description>For Flow Property Check rules: the expected value. Rule fires when property does NOT match (e.g., "SystemModeWithSharing" for Run Mode).</description>
</CustomField>