force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Flow_Property__c.field-meta.xml
<CustomField>
    <fullName>Flow_Property__c</fullName>
    <label>Flow Property</label>
    <type>Picklist</type>
    <description>For Flow Property Check rules: which flow-level property to check</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Has Description</fullName><default>false</default><label>Has Description</label></value>
            <value><fullName>Process Type</fullName><default>false</default><label>Process Type</label></value>
            <value><fullName>Run Mode</fullName><default>false</default><label>Run Mode</label></value>
            <value><fullName>Trigger Type</fullName><default>false</default><label>Trigger Type</label></value>
            <value><fullName>API Version</fullName><default>false</default><label>API Version</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>