force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this custom rule is currently active</description>
</CustomField>