force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Name_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Name_Pattern__c</fullName>
    <label>Name Pattern</label>
    <type>Text</type>
    <length>255</length>
    <description>For Element Name Pattern rules: regex pattern that element names should NOT match (e.g., "^myRule_\\d+" flags auto-generated names)</description>
</CustomField>