force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <label>Remediation</label>
    <type>TextArea</type>
    <description>Suggested fix shown when this rule triggers</description>
</CustomField>