force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule ID</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique identifier for this custom rule (e.g., CUST-001)</description>
</CustomField>