force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>What aspect of the flow this rule checks</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Element Count Threshold</fullName><default>true</default><label>Element Count Threshold</label></value>
            <value><fullName>Element Name Pattern</fullName><default>false</default><label>Element Name Pattern</label></value>
            <value><fullName>Flow Property Check</fullName><default>false</default><label>Flow Property Check</label></value>
            <value><fullName>Element In Loop Check</fullName><default>false</default><label>Element In Loop Check</label></value>
            <value><fullName>Missing Fault Path Check</fullName><default>false</default><label>Missing Fault Path Check</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>