force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>For Element Count Threshold rules: fires when element count exceeds this value</description>
</CustomField>