force-app/main/default/objects/Flow_Health_Custom_Rule__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <required>true</required>
    <defaultValue>5</defaultValue>
    <description>Score deduction weight when this rule triggers (1-20)</description>
</CustomField>